2008-04-28  Simon Hausmann  <hausmann@webkit.org>

        Reviewed by Alp.

        Gtk build fix, similar to the changes done in r32609.

        * platform/graphics/gtk/FontPlatformData.h:
        (WebCore::FontPlatformData::FontPlatformData):
        (WebCore::FontPlatformData::isHashTableDeletedValue):
        (WebCore::FontPlatformData::hashTableDeletedFontValue):

2008-04-28  Simon Hausmann  <hausmann@webkit.org>

        Prospective build fix. After r32609 it seems the workaround here
        is not needed anymore. With gcc 4.2/4.3 before 32609 the workaround
        is needed for compilation, after 32609 compilation only succeeds
        without the workaround.

        * plugins/PluginPackage.h: Removed workaround of extra StorageTraits
        specification for the custom hash function of PluginPackage used in
        PluginSet.

2008-04-28  Tor Arne Vestbø  <tavestbo@trolltech.com>

        Reviewed by Simon.

        https://bugs.webkit.org/show_bug.cgi?id=18713

        Fix scrollbar painting issues in QtWebKit.

        Hovering and click-draging outside of the scrollbar would
        produce unexpected and inconcistent results. We also didn't
        pass on leave-events to the underlying WebKit code, which
        was nessecary to implement the paint fix.

        * platform/qt/PlatformScrollBarQt.cpp:
        (WebCore::PlatformScrollbar::handleMouseMoveEvent):
        (WebCore::PlatformScrollbar::handleMouseOutEvent):
        (WebCore::PlatformScrollbar::handleMouseReleaseEvent):

2008-04-27  Oliver Hunt  <oliver@apple.com>

        Reviewed by Maciej.

        Bug 17173: HTML5 Canvas API requires us to ignore certain operations
        <https://bugs.webkit.org/show_bug.cgi?id=17173>

        This fixes the semantics of a number of Canvas functions to match
        the new HTML5 non-throwing semantics.

        Test: fast/canvas/canvas-path-with-inf-nan-dimensions.html

        * bindings/js/JSCanvasRenderingContext2DCustom.cpp: